--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,13 @@
   width: 100%;
 }
 
+.header {
+  display: flex;
+  gap: 0.5rem;
+  justify-content: center;
+  margin-bottom: 2rem;
+}
+
 .table-header {
   font-weight: bold;
 }
